2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_revolver_d)
	(R_igraph_revolver_ad, R_igraph_revolver_ade, R_igraph_revolver_e)
	(R_igraph_revolver_de, R_igraph_revolver_l, R_igraph_revolver_dl)
	(R_igraph_revolver_el, R_igraph_revolver_r, R_igraph_revolver_ar)
	(R_igraph_revolver_di, R_igraph_revolver_adi, R_igraph_revolver_il)
	(R_igraph_revolver_ir, R_igraph_revolver_air) : logmax calculation added

2007-05-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot)
	* interfaces/R/igraph/R/tkplot.R (tkplot) : arrow.size support added

	* interfaces/R/igraph/R/plot.R (plot) : arrow.size parameter added

2007-05-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/fit.R (power.law.fit) : error/stop bug corrected

2007-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (edge.betweenness.community) 	
	(walktrap.community, spinglass.community)
	* interfaces/R/igraph/R/iterators.R (write.graph.dimacs)
	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
	* interfaces/R/igraph/R/minimum.spanning.tree (minimum.spanning.tree)
	* interfaces/R/igraph/R/revolver.R (revolver.d.d, revolver.p.p)
	* interfaces/R/igraph/structural.properties.R (constraint) :
	bugs corrected, i tend to write V(g) instead of the correct V(graph)...

2007-05-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/interface.R (get.edges) : return a matrix
	* interfaces/R/igraph/R/iterators.R (print.igraph.es) : updated

	* interfaces/R/igraph/R/iterators.R (print.igraph.es, print.igraph.vs) :
	pretty printing

	* interfaces/R/igraph/R/interface.R (get.edges) : added
	* interfaces/R/src/rinterface.c (R_igraph_get_edges) : added

2007-05-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (write.graph) : convert format name to
	lowercase

	* interfaces/R/igraph/R/foreign.R (write.graph, write.graph.gml) :
	GML format added